# py-wappalyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
py_wappalyzer/: __init__.py  __main__.py  analyzer.py  capture.py  cli.py  data_loader.py  har.py  storage.py  web.py
py_wappalyzer/templates/: index.html
